2405 modif JsonReader version Java 8